--- a/src/skins/admin/modules/Coinbase/CoinbaseCommercePayment/config.twig
+++ b/src/skins/admin/modules/Coinbase/CoinbaseCommercePayment/config.twig
@@ -10,7 +10,7 @@
   <h3>{{ t('How to use')|raw }}</h3>
   <ul>
     <li>
-      <p>1. {{ t('Open the page "Settings" of Coinbase Commerce Dashboard:')|raw }} <a href='https://commerce.coinbase.com/dashboard/settings'> https://commerce.coinbase.com/dashboard/settings</a></p>
+      <p>1. {{ t('Open the page "Settings" of PrivacyGate Dashboard:')|raw }} <a href='https://dash.privacygate.io/settings'> https://dash.privacygate.io/settings</a></p>
     </li>
     <li>
       <p>2. {{ t('In the section "Webhook subscriptions", click "Add an endpoint".')|raw }}</p>
@@ -19,7 +19,7 @@
       <p>3. {{ t('In the form that opens, paste the "Webhook URL" value into the field "New Webhook Subscription" and click "Save".')|raw }}</p>
     </li>
     <li>
-      <p>4. {{ t('Copy "App Key" and "Secret Key" from "Settings" page of Coinbase Commerce Dashboard and paste below.')|raw }}</p>
+      <p>4. {{ t('Copy "App Key" and "Secret Key" from "Settings" page of PrivacyGate Dashboard and paste below.')|raw }}</p>
     </li>
   </ul>
 </div>
